# filter_sam

./: .travis.yml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  bc1002_section.sam  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_script.bam  test_xcript.sam  tox.ini  xcript_13190.fasta
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
filter_sam/: __init__.py  cli.py
src/filter_sam/: __init__.py  cli.py
tests/: __init__.py  test_filter_sam.py
